--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.7.0
 click==8.1.6
 colorama==0.4.6
 crispy-bootstrap4==2022.1
+dj-database-url==2.0.0
 Django==4.2.3
 django-crispy-forms==2.0
 flake8==6.0.0
@@ -11,9 +12,11 @@ mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.9.1
+psycopg2==2.9.6
 pycodestyle==2.10.0
 pyflakes==3.0.1
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.7.1
 tzdata==2023.3
+whitenoise==6.5.0
