--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click==8.1.6
 colorama==0.4.6
 crispy-bootstrap4==2022.1
 dj-database-url==2.0.0
-Django==4.2.3
+Django
 django-crispy-forms==2.0
 flake8==6.0.0
 mccabe==0.7.0
